--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.12/dojo/resources/dojo.css">
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.12/dijit/themes/claro/claro.css">
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.12/dojox/grid/resources/Grid.css">
-    <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.12/dojox/grid/resources/claroGrid.css">
-    <link rel="stylesheet" href="http://js.arcgis.com/3.12/esri/css/esri.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.15/dojo/resources/dojo.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.15/dijit/themes/claro/claro.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.15/dojox/grid/resources/Grid.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.15/dojox/grid/resources/claroGrid.css">
+    <link rel="stylesheet" href="//js.arcgis.com/3.15/esri/css/esri.css">
     <link rel="stylesheet" type="text/css" href="buildProject.css">
     <style>
       html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
@@ -33,7 +33,7 @@
      <!--{BUILD-COMMENT}
     <script type="text/javascript" src="js/dojo/dojo.js"></script>
     {BUILD-COMMENT}-->
-    <script type="text/javascript" src="http://js.arcgis.com/3.12/"></script>
+    <script type="text/javascript" src="http://js.arcgis.com/3.15/"></script>
     <script type="text/javascript">
 		require([
 		 	"dojo/_base/kernel",
