--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
      <!--{BUILD-COMMENT}
     <script type="text/javascript" src="js/dojo/dojo.js"></script>
     {BUILD-COMMENT}-->
-    <script type="text/javascript" src="http://js.arcgis.com/3.15/"></script>
+    <script type="text/javascript" src="//js.arcgis.com/3.15/"></script>
     <script type="text/javascript">
 		require([
 		 	"dojo/_base/kernel",
