--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.3/dojo/resources/dojo.css">
-    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.3/dojox/grid/resources/Grid.css">
-    <link rel="stylesheet" href="//js.arcgis.com/4.3/esri/css/main.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.6/dojo/resources/dojo.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.6/dojox/grid/resources/Grid.css">
+    <link rel="stylesheet" href="//js.arcgis.com/4.6/esri/css/main.css">
     <link rel="stylesheet" href="./dojo-themes/flat/flat.css">
     <link rel="stylesheet" type="text/css" href="buildProject.css">
     <script type="text/javascript">
@@ -25,10 +25,7 @@
       //
 	};
     </script>
-     <!--{BUILD-COMMENT}
-    <script type="text/javascript" src="js/dojo/dojo.js"></script>
-    {BUILD-COMMENT}-->
-    <script type="text/javascript" src="//js.arcgis.com/4.3/"></script>
+    <script type="text/javascript" src="//js.arcgis.com/4.6/"></script>
     <script type="text/javascript">
 		require([
 		 	"dojo/_base/kernel",
@@ -44,7 +41,7 @@
   <body class="flat">
     <div id="toolbarNode">
     		</div>
-      <div id="map" dojoType="dijit.layout.ContentPane" region="center" style="overflow:hidden;height:100%;width:100%;">
+      <div id="map" style="overflow:hidden;height:100%;width:100%;">
       </div>
   </body>
 </html>
