--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.6/dojo/resources/dojo.css">
-    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.6/dojox/grid/resources/Grid.css">
-    <link rel="stylesheet" href="//js.arcgis.com/4.6/esri/css/main.css">
-    <link rel="stylesheet" href="./dojo-themes/flat/flat.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.10/dojo/resources/dojo.css">
+    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/4.10/dojox/grid/resources/Grid.css">
+    <link rel="stylesheet" href="//js.arcgis.com/4.10/esri/css/main.css">
+    <link rel="stylesheet" href="../node_modules/dojo-themes/flat/flat.css">
     <link rel="stylesheet" type="text/css" href="buildProject.css">
     <script type="text/javascript">
     var dojoConfig = {
@@ -25,7 +25,7 @@
       //
 	};
     </script>
-    <script type="text/javascript" src="//js.arcgis.com/4.6/"></script>
+    <script type="text/javascript" src="//js.arcgis.com/4.10/"></script>
     <script type="text/javascript">
 		require([
 		 	"dojo/_base/kernel",
