Initial webpack commit

--- a/web/index.html
+++ b/web/index.html
@@ -26,16 +26,7 @@
 	};
     </script>
     <script type="text/javascript" src="//js.arcgis.com/4.10/"></script>
-    <script type="text/javascript">
-		require([
-		 	"dojo/_base/kernel",
-			"buildProject/SiteManager"
-		], function (kernel, SiteManager) {
-			kernel.global.site = new SiteManager();
-			site.init();
-		});
-      
-    </script>
+    <script type="text/javascript" src="index.js"></script>
   </head>
   
   <body class="flat">
